--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EpamApp</string>
+    <string name="app_name">MyVillageKart</string>
     <string name="rate_dialog_title">Rate</string>
     <string name="rate_dialog_message">If you like our app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks!</string>
     <string name="rate_dialog_ok">RATE</string>
